force-app/main/default/objects/Blood_Bank__c/Blood_Bank__c.object-meta.xml
<CustomObject>
    <label>Blood Bank</label>
    <nameField>
        <displayFormat>BLOODBANK-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>