force-app/main/default/objects/Blood_Bank__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Donor__c</referenceTo>
    <relationshipLabel>Blood Banks</relationshipLabel>
    <relationshipName>Blood_Bank</relationshipName>
    <type>Lookup</type>
</CustomField>