force-app/main/default/objects/Blood_Bank__c/fields/Reserved_for_Patient__c.field-meta.xml
<CustomField>
    <fullName>Reserved_for_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserved for Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Patients Reserved</relationshipLabel>
    <relationshipName>Blood_Banks</relationshipName>
    <type>Lookup</type>
</CustomField>